--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,28 @@
         </dependency>
     </dependencies>
 
+//Security moet nog gefixt worden!
+	<dependencies>
+	<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
+
+	<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-test</artifactId>
+	<scope>test</scope>
+</dependency>
+
+
+	<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-test</artifactId>
+	<scope>test</scope>
+
+</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
